--- a/DogGo/Views/Walkers/Details.cshtml
+++ b/DogGo/Views/Walkers/Details.cshtml
@@ -1,42 +1,99 @@
-﻿@model DogGo.Models.Walker
+﻿@model DogGo.Models.ViewModels.WalkerProfileViewModel
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+
+<div>
+    <h1 class="mb-4">@Model.Walker.Name</h1>
+
+    <section class="container">
+        <img style="width:100px;float:left;margin-right:20px"
+             src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Font_Awesome_5_regular_user-circle.svg" />
+        <div>
+            <label class="font-weight-bold">Address:</label>
+            <span>@Model.Walker.Neighborhood.Name</span>
+        </div>
+        
+    </section>
+
+    <hr class="mt-5" />
+    <div class="clearfix"></div>
+
+    <div class="row">
+        <section class="col-8 container mt-5">
+            <h1 class="text-left">Dogs</h1>
+
+            <div class="row">
+                @foreach (Walks walk in Model.Walks)
+                {
+                    <div>
+                        <label class="font-weight-bold">Address:</label>
+                        <span>@Model.Walk.Date</span>
+                    </div>
+                    <div>
+                        <label class="font-weight-bold">Address:</label>
+                        <span>@Model.Walk.Duration</span>
+                    </div>
+                    <div>
+                        <label class="font-weight-bold">Address:</label>
+                        <span>@Model.Walk.DogId</span>
+                    </div>
+                }
+            </div>
+        </section>
+
+        @*<section class="col-lg-4 col-md-8 container mt-5">
+            <h1>Walkers Near Me</h1>
+
+            <ul class="list-group mt-4">
+                @foreach (Walker walker in Model.Walkers)
+                {
+                    <li class="list-group-item disabled" aria-disabled="true">
+                        <img src="@walker.ImageUrl" style="width:50px" />
+                        <span class="font-weight-bold ml-4">@walker.Name</span>
+                    </li>
+                }
+            </ul>   
+        </section>*@
+    </div>
+</div>
+
+
+@*<h1>Details</h1>
 
 <div>
     <h4>Walker</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.Walker.Id)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(model => model.Walker.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Walker.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Walker.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NeighborhoodId)
+            @Html.DisplayNameFor(model => model.Walker.Neighborhood.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NeighborhoodId)
+            @Html.DisplayFor(model => model.Walker.Neighborhood.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
+            @Html.DisplayNameFor(model => model.Walker.ImageUrl)
         </dt>
         <dd class = "col-sm-10">
-            <img class="bg-info" src="@Model.ImageUrl" alt="avatar" />
+            <img class="bg-info" src="@Model.Walker.ImageUrl" alt="avatar" />
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.Id  }) |
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.Walker.Id  }) |
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
