--- a/DogGo/Views/Walks/Details.cshtml
+++ b/DogGo/Views/Walks/Details.cshtml
@@ -10,7 +10,7 @@
              src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Font_Awesome_5_regular_user-circle.svg" />
         <div>
             <label class="font-weight-bold">Address:</label>
-            <span>@Model.Walker.Neighborhood.Name</span>
+            <span>@Model.Walker.Neighborhood.Id</span>
         </div>
 
     </section>
