--- a/DogGo/Views/Walkers/Details.cshtml
+++ b/DogGo/Views/Walkers/Details.cshtml
@@ -1,64 +1,4 @@
-﻿@*@model DogGo.Models.ViewModels.WalkerProfileViewModel
-
-@{
-    ViewData["Title"] = "Details";
-}
-
-
-<div>
-    <h1 class="mb-4">@Model.Walker.Name</h1>
-
-    <section class="container">
-        <img style="width:100px;float:left;margin-right:20px"
-             src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Font_Awesome_5_regular_user-circle.svg" />
-        <div>
-            <label class="font-weight-bold">Neighborhood:</label>
-            <span>@Model.Walker.Neighborhood.Name</span>
-        </div>
-
-    </section>
-
-    <hr class="mt-5" />
-    <div class="clearfix"></div>
-
-    <div class="row">
-        <section class="col-8 container mt-5">
-            <h1 class="text-left">Dogs</h1>
-
-            <div class="row">
-                @foreach (Walks walk in Model.Walks)
-                {
-                    <div>
-                        <label class="font-weight-bold">Date:</label>
-                        <span>@Model.Walk.Date</span>
-                    </div>
-                    <div>
-                        <label class="font-weight-bold">Duration:</label>
-                        <span>@Model.Walk.Duration</span>
-                    </div>
-                    <div>
-                        <label class="font-weight-bold">Client:</label>
-                        <span>@Model.Walk.DogId</span>
-                    </div>
-                }
-            </div>
-        </section>
-
-        <section class="col-lg-4 col-md-8 container mt-5">
-                <h1>Walkers Near Me</h1>
-
-                <ul class="list-group mt-4">
-                    @foreach (Walker walker in Model.Walkers)
-                    {
-                        <li class="list-group-item disabled" aria-disabled="true">
-                            <img src="@walker.ImageUrl" style="width:50px" />
-                            <span class="font-weight-bold ml-4">@walker.Name</span>
-                        </li>
-                    }
-                </ul>
-            </section>
-    </div>
-</div>*@
+﻿
 
 
 @model DogGo.Models.ViewModels.WalkerProfileViewModel
@@ -78,7 +18,7 @@
         </div>
         <div>
             <label class="font-weight-bold">Neighborhood:</label>
-            <span>@Model.Walker.Neighborhood.Name</span>
+            <span>@Model.Walker.Neighborhood.NeighborhoodName</span>
         </div>
 
     </section>
